// Vitest Snapshot v1

exports[`<AnalysisDetail /> > should render 1`] = `
<div>
  <styled.div>
    <styled.div>
      Pathoscope
       for 
      bar
      <Connect(AnalysisCacheLink) />
    </styled.div>
    <styled.span>
       started 
      <RelativeTime
        time="2019-05-28T19:04:25.201000Z"
      />
    </styled.span>
  </styled.div>
  <PathoscopeViewer />
</div>
`;

exports[`<AnalysisDetail /> > should render error when workflow is invalid] 1`] = `
<div>
  Unusable analysis detail content
</div>
`;

exports[`<AnalysisDetail /> > should render expected view when workflow is NuVs] 1`] = `
<div>
  <styled.div>
    <styled.div>
      NuVs
       for 
      bar
      <Connect(AnalysisCacheLink) />
    </styled.div>
    <styled.span>
       started 
      <RelativeTime
        time="2019-05-28T19:04:25.201000Z"
      />
    </styled.span>
  </styled.div>
  <NuVsViewer />
</div>
`;

exports[`<AnalysisDetail /> > should render loading when [detail=null] 1`] = `<LoadingPlaceholder />`;

exports[`<AnalysisDetail /> > should render message when error is not null 1`] = `<NotFound />`;

exports[`<AnalysisDetail /> > should render pending when [detail.ready=false] 1`] = `
<styled.div>
  <LoadingPlaceholder
    margin="1.2rem"
    message="Analysis in progress"
  />
</styled.div>
`;
